# major-2-experiments

./: .gitignore  EOS04 EDITED.xlsx  SENTINEL Edited.xlsx  pyproject.toml
Progress Review for meeting on 23/08/: 2025.md
code/: Classical ML Results with Metrics.xlsx  ann.ipynb  classical_ML_train_val_test.ipynb  classical_ml.ipynb  classical_ml_new.ipynb  combined.ipynb  feature_testing.ipynb  features.csv  loss_landscape.ipynb  model_experiments.py  pi_estimation.ipynb  pi_estimation_hp_tuning.ipynb  results.md  results_vis.ipynb  test.csv  tmp.py  tubeloss.ipynb  utils.py
data/: EOS04 EDITED.xlsx  SENTINEL Edited.xlsx  eos_sentinel_diff.xlsx  manually_combined.xlsx  sentinel_processed.xlsx
experiments/ann_pi_ml_old_data/code/: all_results.csv  ann.ipynb  classical_ml_old.ipynb  conformal_regression.ipynb  feature_testing.ipynb  pi_estimation.ipynb  pi_estimation_hp_tuning.ipynb  testing.ipynb  testlmao.ipynb  tubeloss.ipynb  tubeloss.py
experiments/ann_pi_ml_old_data/data/: eos_processed.xlsx  manually_combined.xlsx  matched combined.xlsx  sentinel_processed.xlsx
experiments/classification_new_data/code/: ann_censored.ipynb  ann_uncensored.ipynb  classical_ml_censored.ipynb  classical_ml_uncensored.ipynb  classification.ipynb  classification_uncensored.ipynb  conformal_regression.ipynb  conformal_regression_censored.ipynb  conformal_regression_uncensored.ipynb  conformalized_quantile_regression_uncensored.ipynb  constants.py  exploration.ipynb  exploration_eos.ipynb  exploration_sentinel.ipynb  (+6 more)
output/metrics/: Classical ML Results with Metrics.xlsx
(+39 files in other folders)
