[project]
name = "ml-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "mapie>=1.1.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tensorflow-cpu>=2.20.0",
    "tqdm>=4.67.1",
    "xgboost-cpu==3.0.0",
]
